plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

description = 'Unified restaurant management platform'

allprojects {
	group = 'com.restaurantos'
	version = '0.0.1-SNAPSHOT'

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(17)
		}
	}

	dependencies {
		compileOnly 'org.projectlombok:lombok'

		developmentOnly 'org.springframework.boot:spring-boot-devtools'

		annotationProcessor 'org.projectlombok:lombok'
		annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'

		implementation 'org.apache.commons:commons-collections4:4.4'
		implementation 'org.apache.commons:commons-lang3:3.12.0'

		testImplementation 'org.testcontainers:junit-jupiter'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
	}

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	test {
		useJUnitPlatform()
	}
}